--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>Animal Adopt React</title>
+		<title>香港寵物交易領養平台</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
